@@ -208,6 +208,8 @@
 #  include <avr/iom640.h>
 #elif defined (__AVR_ATmega644__)
 #  include <avr/iom644.h>
+#elif defined (__AVR_ATmega644P__)
+#  include <avr/iom644.h>
 #elif defined (__AVR_ATmega645__)
 #  include <avr/iom645.h>
 #elif defined (__AVR_ATmega6450__)
@@ -222,7 +224,7 @@
 #  include <avr/iom32.h>
 #elif defined (__AVR_ATmega323__)
 #  include <avr/iom323.h>
-#elif defined (__AVR_ATmega324__)
+#elif defined (__AVR_ATmega324P__)
 #  include <avr/iom324.h>
 #elif defined (__AVR_ATmega325__)
 #  include <avr/iom325.h>
@@ -242,7 +244,7 @@
 #  include <avr/iom162.h>
 #elif defined (__AVR_ATmega163__)
 #  include <avr/iom163.h>
-#elif defined (__AVR_ATmega164__)
+#elif defined (__AVR_ATmega164P__)
 #  include <avr/iom164.h>
 #elif defined (__AVR_ATmega165__)
 #  include <avr/iom165.h>
